[package]
name = "with_ai_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
rocket = "0.4.11"
line-bot-sdk-rust = { git = "https://github.com/claustra01/line-bot-sdk-rust" , rev = "0d016738954b54d448e08786944bc1c6e8dd4f53", features = ["rocket_support"] }
tokio = { version = "1.25.0", features = [ "rt-multi-thread", "macros" ] }
openai-api-rs = "0.1.1"
futures = "0.3.26"
